--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "@fortawesome/free-brands-svg-icons": "^5.10.2",
     "@fortawesome/free-solid-svg-icons": "^5.10.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "firebase": "^6.4.2",
     "jquery": "^3.4.1",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-infinite-scroll-component": "^5.0.4",
     "react-redux": "^7.1.0",
     "react-responsive-carousel": "^3.1.50",
     "react-reveal": "^1.2.2",
